# Comp-D_MPI

./: Dfoil.cpp  Dfoil.h  Dstat.cpp  Dstat.h  Makefile  Makefile.am  Makefile.in  README.md  Stats.h  aclocal.m4  config.status  configure.ac  dstat_main.cpp  example.cpp  fnFiles.cpp  fnFiles.h  fnStats.cpp  fnStats.h  fn_main.cpp  fourtax.cpp  fourtax.h  locus.h  partD.cpp  partD.h  popZDfoil.cpp  popZDfoil.h  popZDstat.cpp  popZDstat.h  popZParent.h  popZpartD.cpp  popZpartD.h
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
conda.recipe/: build.sh  meta.yaml
example/: README.md  ab_map.txt  abc_map.txt  abcd_map.txt  example.phy  popmap.txt  taxafile.txt
m4/: ax_prog_cxx_mpi.m4
src/: Dfoil.cpp  Dstat.cpp  DstatParent.cpp  DstatParent.h  Makefile  Makefile.am  Makefile.in  Stats.cpp  dstat_main.cpp  fn  fnFiles.cpp  fnFiles.h  fnStats.h  fn_main.cpp  locus.cpp  locusfile.cpp  locusfile.h  popZDfoil.cpp  popZDstat.cpp  popZDstat.h  popZParent.cpp  popZpartD.cpp
src/.deps/: Dfoil.Po  Dstat.Po  DstatParent.Po  Stats.Po  compDmpi-dstat_main.Po  dstat_main.Po  fn-fn_main.Po  fnFiles.Po  fnStats.Po  fourtax.Po  locusfile.Po  partD.Po  popZDfoil.Po  popZDstat.Po  popZParent.Po  popZpartD.Po
